welcome.lessons.welcome.array.has271.Has271.scala.error
has271:3: error: value ==- is not a member of Int
	if ( nums(i+1)==(nums(i)+5) & ((nums(i+2)==(nums(i)-1)) || (nums(i+2)-nums(i))==-1)){
                                                                                      ^